fix: New French translations from Crowdin [ci skip]

--- a/shared/i18n/locales/fr_FR/translation.json
+++ b/shared/i18n/locales/fr_FR/translation.json
@@ -388,6 +388,7 @@
   "Revision deleted": "Révision supprimée",
   "Current version": "Version actuelle",
   "{{userName}} edited": "{{userName}} a modifié",
+  "Revision options": "Options de version",
   "Results": "Résultats",
   "No results for {{query}}": "Aucun résultats pour {{query}}",
   "Manage": "Gérer",
@@ -554,6 +555,7 @@
   "Italic": "Italique",
   "Sorry, that link won’t work for this embed type": "Désolé, ce lien ne fonctionne pas pour ce type d'intégration",
   "File attachment": "Pièce jointe",
+  "Embed PDF": "Embed PDF",
   "Enter a link": "Entrez un lien",
   "Big heading": "En-tête",
   "Medium heading": "Titre moyen",
@@ -647,7 +649,6 @@
   "Revoking": "Supression en cours",
   "Are you sure you want to revoke access?": "Êtes-vous sûr de vouloir révoquer l'accès ?",
   "Delete app": "Supprimer l'application",
-  "Revision options": "Options de version",
   "Share options": "Options de partage",
   "Headings you add to the document will appear here": "Les titres que vous ajoutez au document apparaîtront ici",
   "Contents": "Contenu",
