fix: New Spanish translations from Crowdin [ci skip]

--- a/shared/i18n/locales/es_ES/translation.json
+++ b/shared/i18n/locales/es_ES/translation.json
@@ -388,6 +388,7 @@
   "Revision deleted": "Revisión eliminada",
   "Current version": "Versión actual",
   "{{userName}} edited": "{{userName}} ha editado",
+  "Revision options": "Opciones de revisión",
   "Results": "Resultados",
   "No results for {{query}}": "Sin resultados para {{query}}",
   "Manage": "Administrar",
@@ -554,6 +555,7 @@
   "Italic": "Cursiva",
   "Sorry, that link won’t work for this embed type": "Lo sentimos, ese enlace no funcionará para este tipo de embed",
   "File attachment": "Archivo adjunto",
+  "Embed PDF": "Embed PDF",
   "Enter a link": "Introduce un enlace",
   "Big heading": "Encabezado grande",
   "Medium heading": "Encabezado mediano",
@@ -647,7 +649,6 @@
   "Revoking": "Revocando",
   "Are you sure you want to revoke access?": "¿Seguro que quieres revocar el acceso?",
   "Delete app": "Eliminar aplicación",
-  "Revision options": "Opciones de revisión",
   "Share options": "Opciones de compartir",
   "Headings you add to the document will appear here": "Los encabezados que añadas al documento aparecerán aquí",
   "Contents": "Contenidos",
