fix: New Czech translations from Crowdin [ci skip]

--- a/shared/i18n/locales/cs_CZ/translation.json
+++ b/shared/i18n/locales/cs_CZ/translation.json
@@ -388,6 +388,7 @@
   "Revision deleted": "Revision deleted",
   "Current version": "Aktuální verze",
   "{{userName}} edited": "{{userName}} akutalizoval",
+  "Revision options": "Možnosti revize",
   "Results": "Výsledky",
   "No results for {{query}}": "Žádné výsledky pro {{query}}",
   "Manage": "Spravovat",
@@ -554,6 +555,7 @@
   "Italic": "Kurzíva",
   "Sorry, that link won’t work for this embed type": "Je nám líto, tento odkaz nebude pro tento typ vložení fungovat",
   "File attachment": "Příloha",
+  "Embed PDF": "Embed PDF",
   "Enter a link": "Enter a link",
   "Big heading": "Velký nadpis",
   "Medium heading": "Střední nadpis",
@@ -647,7 +649,6 @@
   "Revoking": "Odvolávání",
   "Are you sure you want to revoke access?": "Are you sure you want to revoke access?",
   "Delete app": "Delete app",
-  "Revision options": "Možnosti revize",
   "Share options": "Možnosti sdílení",
   "Headings you add to the document will appear here": "Zde se zobrazí nadpisy, které přidáte do dokumentu",
   "Contents": "Obsah",
