fix: New Danish translations from Crowdin [ci skip]

--- a/shared/i18n/locales/da_DK/translation.json
+++ b/shared/i18n/locales/da_DK/translation.json
@@ -388,6 +388,7 @@
   "Revision deleted": "Revision slettet",
   "Current version": "Aktuelle version",
   "{{userName}} edited": "{{userName}} redigerede",
+  "Revision options": "Revision options",
   "Results": "Resultater",
   "No results for {{query}}": "Ingen resultater for {{query}}",
   "Manage": "Administrér",
@@ -554,6 +555,7 @@
   "Italic": "Kursiv",
   "Sorry, that link won’t work for this embed type": "Beklager, linket virker ikke for denne indlejrede type",
   "File attachment": "Vedhæftet fil",
+  "Embed PDF": "Embed PDF",
   "Enter a link": "Indsæt et link",
   "Big heading": "Stor overskrift",
   "Medium heading": "Mellem overskrift",
@@ -647,7 +649,6 @@
   "Revoking": "Revoking",
   "Are you sure you want to revoke access?": "Are you sure you want to revoke access?",
   "Delete app": "Delete app",
-  "Revision options": "Revision options",
   "Share options": "Share options",
   "Headings you add to the document will appear here": "Headings you add to the document will appear here",
   "Contents": "Contents",
