fix: New German translations from Crowdin [ci skip]

--- a/shared/i18n/locales/de_DE/translation.json
+++ b/shared/i18n/locales/de_DE/translation.json
@@ -388,6 +388,7 @@
   "Revision deleted": "Überarbeitung gelöscht",
   "Current version": "Aktuelle Version",
   "{{userName}} edited": "{{userName}} bearbeitete",
+  "Revision options": "Version-Einstellungen",
   "Results": "Ergebnisse",
   "No results for {{query}}": "Keine Ergebnisse für {{query}}",
   "Manage": "Verwalten",
@@ -554,6 +555,7 @@
   "Italic": "Kursiv",
   "Sorry, that link won’t work for this embed type": "Dieser Link funktioniert für diesen Einbettungstyp leider nicht",
   "File attachment": "Dateianhang",
+  "Embed PDF": "Embed PDF",
   "Enter a link": "Link eintragen",
   "Big heading": "Große Überschrift",
   "Medium heading": "Mittlere Überschrift",
@@ -647,7 +649,6 @@
   "Revoking": "Wird widerrufen",
   "Are you sure you want to revoke access?": "Sind Sie sicher, dass Sie den Zugriff widerrufen wollen?",
   "Delete app": "Anwendung löschen",
-  "Revision options": "Version-Einstellungen",
   "Share options": "Teilen-Einstellungen",
   "Headings you add to the document will appear here": "Überschriften, die du dem Dokument hinzufügst, werden hier angezeigt",
   "Contents": "Inhalte",
