--- a/shared/i18n/locales/he_IL/translation.json
+++ b/shared/i18n/locales/he_IL/translation.json
@@ -388,6 +388,7 @@
   "Revision deleted": "Revision deleted",
   "Current version": "גרסה נוכחית",
   "{{userName}} edited": "{{userName}} edited",
+  "Revision options": "Revision options",
   "Results": "Results",
   "No results for {{query}}": "No results for {{query}}",
   "Manage": "Manage",
@@ -554,6 +555,7 @@
   "Italic": "Italic",
   "Sorry, that link won’t work for this embed type": "Sorry, that link won’t work for this embed type",
   "File attachment": "File attachment",
+  "Embed PDF": "Embed PDF",
   "Enter a link": "Enter a link",
   "Big heading": "Big heading",
   "Medium heading": "Medium heading",
@@ -647,7 +649,6 @@
   "Revoking": "Revoking",
   "Are you sure you want to revoke access?": "Are you sure you want to revoke access?",
   "Delete app": "Delete app",
-  "Revision options": "Revision options",
   "Share options": "Share options",
   "Headings you add to the document will appear here": "Headings you add to the document will appear here",
   "Contents": "Contents",
