fix: New Hungarian translations from Crowdin [ci skip]

--- a/shared/i18n/locales/hu_HU/translation.json
+++ b/shared/i18n/locales/hu_HU/translation.json
@@ -388,6 +388,7 @@
   "Revision deleted": "A módosítás törölve lett",
   "Current version": "Jelenlegi verzió",
   "{{userName}} edited": "{{userName}} módosította",
+  "Revision options": "Revízió beállítások",
   "Results": "Eredmények",
   "No results for {{query}}": "Nincs találat: {{query}}",
   "Manage": "Kezelés",
@@ -554,6 +555,7 @@
   "Italic": "Dőlt",
   "Sorry, that link won’t work for this embed type": "Sajnálom, ez a hivatkozás nem működik ennél a beágyazott típusnál",
   "File attachment": "Fájlmelléklet",
+  "Embed PDF": "Embed PDF",
   "Enter a link": "Enter a link",
   "Big heading": "Nagy címsor",
   "Medium heading": "Közepes címsor",
@@ -647,7 +649,6 @@
   "Revoking": "Revoking",
   "Are you sure you want to revoke access?": "Are you sure you want to revoke access?",
   "Delete app": "Delete app",
-  "Revision options": "Revízió beállítások",
   "Share options": "Megosztási beállítások",
   "Headings you add to the document will appear here": "A dokumentumhoz hozzáadott címsorok itt jelennek meg",
   "Contents": "Tartalom",
