fix: New Italian translations from Crowdin [ci skip]

--- a/shared/i18n/locales/it_IT/translation.json
+++ b/shared/i18n/locales/it_IT/translation.json
@@ -388,6 +388,7 @@
   "Revision deleted": "Revisione eliminata",
   "Current version": "Versione corrente",
   "{{userName}} edited": "{{userName}} modificato",
+  "Revision options": "Opzioni revisione",
   "Results": "Risultati",
   "No results for {{query}}": "Nessun risultato per {{query}}",
   "Manage": "Gestisci",
@@ -554,6 +555,7 @@
   "Italic": "Corsivo",
   "Sorry, that link won’t work for this embed type": "Siamo spiacenti, questo link non funzionerà per questo tipo di embed",
   "File attachment": "File allegato",
+  "Embed PDF": "Embed PDF",
   "Enter a link": "Inserisci un link",
   "Big heading": "Titolo grande",
   "Medium heading": "Titolo medio",
@@ -647,7 +649,6 @@
   "Revoking": "Sto revocando",
   "Are you sure you want to revoke access?": "Sei sicuro di voler revocare l'accesso?",
   "Delete app": "Elimina app",
-  "Revision options": "Opzioni revisione",
   "Share options": "Opzioni di condivisione",
   "Headings you add to the document will appear here": "Le intestazioni aggiunte al documento appariranno qui",
   "Contents": "Contenuti",
