fix: New Japanese translations from Crowdin [ci skip]

--- a/shared/i18n/locales/ja_JP/translation.json
+++ b/shared/i18n/locales/ja_JP/translation.json
@@ -388,6 +388,7 @@
   "Revision deleted": "Revision deleted",
   "Current version": "現在のバージョン",
   "{{userName}} edited": "{{userName}} が編集しました",
+  "Revision options": "改訂オプション",
   "Results": "検索結果",
   "No results for {{query}}": "{{query}} に該当する検索結果はありませんでした",
   "Manage": "管理者",
@@ -554,6 +555,7 @@
   "Italic": "斜体",
   "Sorry, that link won’t work for this embed type": "この埋め込みではリンクが機能しません",
   "File attachment": "ファイル添付",
+  "Embed PDF": "Embed PDF",
   "Enter a link": "リンクを入力",
   "Big heading": "見出し1",
   "Medium heading": "見出し2",
@@ -647,7 +649,6 @@
   "Revoking": "無効化しています",
   "Are you sure you want to revoke access?": "Are you sure you want to revoke access?",
   "Delete app": "Delete app",
-  "Revision options": "改訂オプション",
   "Share options": "共有オプション",
   "Headings you add to the document will appear here": "ドキュメントに追加した見出しがここに表示されます",
   "Contents": "目次",
