fix: New Korean translations from Crowdin [ci skip]

--- a/shared/i18n/locales/ko_KR/translation.json
+++ b/shared/i18n/locales/ko_KR/translation.json
@@ -388,6 +388,7 @@
   "Revision deleted": "수정본 삭제됨",
   "Current version": "현재 버전",
   "{{userName}} edited": "{{userName}} 이(가) 수정함",
+  "Revision options": "수정 옵션",
   "Results": "결과",
   "No results for {{query}}": "{{query}} 에 대한 검색결과가 없습니다.",
   "Manage": "관리",
@@ -554,6 +555,7 @@
   "Italic": "이탤릭체",
   "Sorry, that link won’t work for this embed type": "죄송합니다, 해당 링크를 이 임베드 유형에서 사용할 수 없습니다",
   "File attachment": "첨부 파일",
+  "Embed PDF": "Embed PDF",
   "Enter a link": "링크 입력",
   "Big heading": "큰 제목",
   "Medium heading": "중간 제목",
@@ -647,7 +649,6 @@
   "Revoking": "취소",
   "Are you sure you want to revoke access?": "정말로 접근을 취소하시겠습니까?",
   "Delete app": "앱 삭제",
-  "Revision options": "수정 옵션",
   "Share options": "공유 옵션",
   "Headings you add to the document will appear here": "문서에 추가한 제목이 여기에 표시됩니다.",
   "Contents": "콘텐츠",
