fix: New Dutch translations from Crowdin [ci skip]

--- a/shared/i18n/locales/nl_NL/translation.json
+++ b/shared/i18n/locales/nl_NL/translation.json
@@ -388,6 +388,7 @@
   "Revision deleted": "Revisie verwijderd",
   "Current version": "Huidige versie",
   "{{userName}} edited": "{{userName}} bewerkte",
+  "Revision options": "Revisie opties",
   "Results": "Resultaten",
   "No results for {{query}}": "Geen zoekresultaten voor {{query}}",
   "Manage": "Beheer",
@@ -554,6 +555,7 @@
   "Italic": "Cursief",
   "Sorry, that link won’t work for this embed type": "Sorry, die link werkt niet voor dit insluitingstype",
   "File attachment": "Bestandsbijlage",
+  "Embed PDF": "Embed PDF",
   "Enter a link": "Voer een link in",
   "Big heading": "Grote titel",
   "Medium heading": "Middelgrote titel",
@@ -647,7 +649,6 @@
   "Revoking": "Intrekken",
   "Are you sure you want to revoke access?": "Weet je zeker dat je de toegang wil intrekken?",
   "Delete app": "App verwijderen",
-  "Revision options": "Revisie opties",
   "Share options": "Deel opties",
   "Headings you add to the document will appear here": "Koppen die je aan het document toevoegt, verschijnen hier",
   "Contents": "Inhoud",
