fix: New Polish translations from Crowdin [ci skip]

--- a/shared/i18n/locales/pl_PL/translation.json
+++ b/shared/i18n/locales/pl_PL/translation.json
@@ -388,6 +388,7 @@
   "Revision deleted": "Usunięto poprawkę",
   "Current version": "Aktualna wersja",
   "{{userName}} edited": "Użytkownik {{userName}} edytował",
+  "Revision options": "Opcje rewizji",
   "Results": "Wyniki",
   "No results for {{query}}": "Brak wyników dla {{query}}",
   "Manage": "Zarządzaj",
@@ -554,6 +555,7 @@
   "Italic": "Kursywa",
   "Sorry, that link won’t work for this embed type": "Niestety, ten link nie będzie działał dla tego typu osadzenia",
   "File attachment": "Załącznik pliku",
+  "Embed PDF": "Embed PDF",
   "Enter a link": "Wprowadź link",
   "Big heading": "Duży nagłówek",
   "Medium heading": "Średni nagłówek",
@@ -647,7 +649,6 @@
   "Revoking": "Unieważnianie...",
   "Are you sure you want to revoke access?": "Czy na pewno chcesz cofnąć dostęp?",
   "Delete app": "Usuń aplikację",
-  "Revision options": "Opcje rewizji",
   "Share options": "Opcje udostępniania",
   "Headings you add to the document will appear here": "Tutaj pojawią się nagłówki, które dodasz do dokumentu",
   "Contents": "Treść",
