fix: New Portuguese translations from Crowdin [ci skip]

--- a/shared/i18n/locales/pt_PT/translation.json
+++ b/shared/i18n/locales/pt_PT/translation.json
@@ -388,6 +388,7 @@
   "Revision deleted": "Revision deleted",
   "Current version": "Versão atual",
   "{{userName}} edited": "{{userName}} editado",
+  "Revision options": "Opções de revisão",
   "Results": "Resultados",
   "No results for {{query}}": "Sem resultados para {{query}}",
   "Manage": "Gerir",
@@ -554,6 +555,7 @@
   "Italic": "Itálico",
   "Sorry, that link won’t work for this embed type": "Desculpe, esse link não funcionará para este tipo de incorporação",
   "File attachment": "Anexo",
+  "Embed PDF": "Embed PDF",
   "Enter a link": "Enter a link",
   "Big heading": "Cabeçalho grande",
   "Medium heading": "Cabeçalho médio",
@@ -647,7 +649,6 @@
   "Revoking": "A revogar",
   "Are you sure you want to revoke access?": "Are you sure you want to revoke access?",
   "Delete app": "Delete app",
-  "Revision options": "Opções de revisão",
   "Share options": "Opções de partilha",
   "Headings you add to the document will appear here": "Cabeçalhos que adicionar ao documento aparecerão aqui",
   "Contents": "Conteúdo",
