fix: New Swedish translations from Crowdin [ci skip]

--- a/shared/i18n/locales/sv_SE/translation.json
+++ b/shared/i18n/locales/sv_SE/translation.json
@@ -388,6 +388,7 @@
   "Revision deleted": "Revision raderad",
   "Current version": "Nuvarande version",
   "{{userName}} edited": "{{userName}} redigerade",
+  "Revision options": "Alternativ för revidering",
   "Results": "Resultat",
   "No results for {{query}}": "Inga resultat för {{query}}",
   "Manage": "Administrera",
@@ -554,6 +555,7 @@
   "Italic": "Kursiv",
   "Sorry, that link won’t work for this embed type": "Den länken fungerar tyvärr inte för den här inbäddningstypen",
   "File attachment": "Bifogad fil",
+  "Embed PDF": "Embed PDF",
   "Enter a link": "Ange en länk",
   "Big heading": "Stor rubrik",
   "Medium heading": "Medelstor rubrik",
@@ -647,7 +649,6 @@
   "Revoking": "Återkallar",
   "Are you sure you want to revoke access?": "Är du säker på att du vill återkalla åtkomst?",
   "Delete app": "Ta bort app",
-  "Revision options": "Alternativ för revidering",
   "Share options": "Delningsalternativ",
   "Headings you add to the document will appear here": "Rubriker som du lägger till i dokumentet visas här",
   "Contents": "Innehåll",
