fix: New Turkish translations from Crowdin [ci skip]

--- a/shared/i18n/locales/tr_TR/translation.json
+++ b/shared/i18n/locales/tr_TR/translation.json
@@ -388,6 +388,7 @@
   "Revision deleted": "Revizyon silindi",
   "Current version": "Mevcut sürüm",
   "{{userName}} edited": "{{userName}} düzenledi",
+  "Revision options": "Revizyon seçenekleri",
   "Results": "Sonuçlar",
   "No results for {{query}}": "{{query}} için sonuç bulunamadı",
   "Manage": "Yönet",
@@ -554,6 +555,7 @@
   "Italic": "İtalik",
   "Sorry, that link won’t work for this embed type": "Üzgünüz, bu bağlantı bu yerleştirme türü için çalışmayacaktır",
   "File attachment": "Dosya eki",
+  "Embed PDF": "Embed PDF",
   "Enter a link": "Bir bağlantı girin",
   "Big heading": "Büyük başlık",
   "Medium heading": "Orta başlık",
@@ -647,7 +649,6 @@
   "Revoking": "İptal ediliyor",
   "Are you sure you want to revoke access?": "Erişimi iptal etmek istediğinizden emin misiniz?",
   "Delete app": "Uygulamayı sil",
-  "Revision options": "Revizyon seçenekleri",
   "Share options": "Paylaşım seçenekleri",
   "Headings you add to the document will appear here": "Belgeye eklediğiniz başlıklar burada görünecek",
   "Contents": "İçindekiler",
