fix: New Ukrainian translations from Crowdin [ci skip]

--- a/shared/i18n/locales/uk_UA/translation.json
+++ b/shared/i18n/locales/uk_UA/translation.json
@@ -388,6 +388,7 @@
   "Revision deleted": "Версія видалена",
   "Current version": "Поточна версія",
   "{{userName}} edited": "{{userName}} відредаговано",
+  "Revision options": "Варіанти перегляду",
   "Results": "Результати",
   "No results for {{query}}": "За запитом \"{{query}}\" нічого не знайдено :(",
   "Manage": "Керування",
@@ -554,6 +555,7 @@
   "Italic": "Курсив",
   "Sorry, that link won’t work for this embed type": "На жаль, це посилання не працюватиме для цього типу вставлення",
   "File attachment": "Вкладений файл",
+  "Embed PDF": "Embed PDF",
   "Enter a link": "Ввести посилання",
   "Big heading": "Великий заголовок",
   "Medium heading": "Середній заголовок",
@@ -647,7 +649,6 @@
   "Revoking": "Анулювання",
   "Are you sure you want to revoke access?": "Ви впевнені, що бажаєте скасувати доступ?",
   "Delete app": "Видалити додаток",
-  "Revision options": "Варіанти перегляду",
   "Share options": "Параметри спільного використання",
   "Headings you add to the document will appear here": "Тут з’являться заголовки, які ви додасте до документа",
   "Contents": "Зміст",
