fix: New Chinese Simplified translations from Crowdin [ci skip]

--- a/shared/i18n/locales/zh_CN/translation.json
+++ b/shared/i18n/locales/zh_CN/translation.json
@@ -388,6 +388,7 @@
   "Revision deleted": "修订已被删除",
   "Current version": "当前版本",
   "{{userName}} edited": "{{userName}} 已编辑",
+  "Revision options": "修订选项",
   "Results": "结果",
   "No results for {{query}}": "没有关于 {{query}} 的结果",
   "Manage": "管理",
@@ -554,6 +555,7 @@
   "Italic": "斜体",
   "Sorry, that link won’t work for this embed type": "抱歉，该链接不适用于此嵌入类型",
   "File attachment": "附件",
+  "Embed PDF": "Embed PDF",
   "Enter a link": "输入一个链接",
   "Big heading": "主标题",
   "Medium heading": "次标题",
@@ -647,7 +649,6 @@
   "Revoking": "吊销中",
   "Are you sure you want to revoke access?": "您确定要移除权限吗？",
   "Delete app": "删除应用",
-  "Revision options": "修订选项",
   "Share options": "分享选项",
   "Headings you add to the document will appear here": "添加到文档中的标题将显示在这里",
   "Contents": "目录",
