fix: New Chinese Traditional translations from Crowdin [ci skip]

--- a/shared/i18n/locales/zh_TW/translation.json
+++ b/shared/i18n/locales/zh_TW/translation.json
@@ -388,6 +388,7 @@
   "Revision deleted": "Revision deleted",
   "Current version": "目前版本",
   "{{userName}} edited": "{{userName}} 已編輯",
+  "Revision options": "修訂版本選項",
   "Results": "結果",
   "No results for {{query}}": "沒有任何匹配 ”{{query}}“ 的搜尋結果",
   "Manage": "管理",
@@ -554,6 +555,7 @@
   "Italic": "斜體",
   "Sorry, that link won’t work for this embed type": "抱歉，不支援將這個連結嵌入到文件",
   "File attachment": "附加檔案",
+  "Embed PDF": "Embed PDF",
   "Enter a link": "輸入一個連結",
   "Big heading": "大標題",
   "Medium heading": "中標題",
@@ -647,7 +649,6 @@
   "Revoking": "撤銷中",
   "Are you sure you want to revoke access?": "Are you sure you want to revoke access?",
   "Delete app": "Delete app",
-  "Revision options": "修訂版本選項",
   "Share options": "共享設定",
   "Headings you add to the document will appear here": "您在文件中新增的標題會顯示在此",
   "Contents": "目錄",
