fix: New Vietnamese translations from Crowdin [ci skip]

--- a/shared/i18n/locales/vi_VN/translation.json
+++ b/shared/i18n/locales/vi_VN/translation.json
@@ -388,6 +388,7 @@
   "Revision deleted": "Phiên bản đã được xóa",
   "Current version": "Phiên bản hiện tại",
   "{{userName}} edited": "{{userName}} đã chỉnh sửa",
+  "Revision options": "Tùy chọn sửa đổi",
   "Results": "Kết quả",
   "No results for {{query}}": "Không có kết quả cho {{query}}",
   "Manage": "Quản lý",
@@ -554,6 +555,7 @@
   "Italic": "Nghiêng",
   "Sorry, that link won’t work for this embed type": "Xin lỗi, liên kết đó sẽ không hoạt động cho loại nhúng này",
   "File attachment": "Tài liệu đính kèm",
+  "Embed PDF": "Embed PDF",
   "Enter a link": "Enter a link",
   "Big heading": "Tiêu đề lớn",
   "Medium heading": "Tiêu đề vừa",
@@ -647,7 +649,6 @@
   "Revoking": "Đang thu hồi",
   "Are you sure you want to revoke access?": "Bạn có chắc muốn thu hồi quyền truy cập?",
   "Delete app": "Xoá ứng dụng",
-  "Revision options": "Tùy chọn sửa đổi",
   "Share options": "Tùy chọn chia sẻ",
   "Headings you add to the document will appear here": "Các tiêu đề bạn thêm vào tài liệu sẽ xuất hiện ở đây",
   "Contents": "Nội Dung",
