--- a/shared/i18n/locales/pt_BR/translation.json
+++ b/shared/i18n/locales/pt_BR/translation.json
@@ -388,6 +388,7 @@
   "Revision deleted": "Revisão excluída",
   "Current version": "Versão atual",
   "{{userName}} edited": "{{userName}} editou",
+  "Revision options": "Opções de revisão",
   "Results": "Resultados",
   "No results for {{query}}": "Sem resultados para {{query}}",
   "Manage": "Gerenciar",
@@ -554,6 +555,7 @@
   "Italic": "Itálico",
   "Sorry, that link won’t work for this embed type": "Desculpe, esse link não funcionará para este tipo de incorporação",
   "File attachment": "Arquivo anexo",
+  "Embed PDF": "Embed PDF",
   "Enter a link": "Insira um link",
   "Big heading": "Cabeçalho grande",
   "Medium heading": "Cabeçalho médio",
@@ -647,7 +649,6 @@
   "Revoking": "Revogando",
   "Are you sure you want to revoke access?": "Tem certeza de que deseja revogar o acesso?",
   "Delete app": "Excluir aplicativo",
-  "Revision options": "Opções de revisão",
   "Share options": "Opções de compartilhamento",
   "Headings you add to the document will appear here": "Os cabeçalhos que você adicionar ao documento aparecerão aqui",
   "Contents": "Conteúdo",
