fix: New Indonesian translations from Crowdin [ci skip]

--- a/shared/i18n/locales/id_ID/translation.json
+++ b/shared/i18n/locales/id_ID/translation.json
@@ -388,6 +388,7 @@
   "Revision deleted": "Revision deleted",
   "Current version": "Current version",
   "{{userName}} edited": "{{userName}} menyunting",
+  "Revision options": "Opsi revisi",
   "Results": "Hasil",
   "No results for {{query}}": "Tak ada hasil untuk {{query}}",
   "Manage": "Manage",
@@ -554,6 +555,7 @@
   "Italic": "Miring",
   "Sorry, that link won’t work for this embed type": "Maaf, tautan itu tidak berfungsi untuk jenis embed ini",
   "File attachment": "Lampiran berkas",
+  "Embed PDF": "Embed PDF",
   "Enter a link": "Enter a link",
   "Big heading": "Judul besar",
   "Medium heading": "Judul sedang",
@@ -647,7 +649,6 @@
   "Revoking": "Mencabut",
   "Are you sure you want to revoke access?": "Are you sure you want to revoke access?",
   "Delete app": "Delete app",
-  "Revision options": "Opsi revisi",
   "Share options": "Opsi bagikan",
   "Headings you add to the document will appear here": "Judul yang Anda tambahkan ke dokumen akan muncul di sini",
   "Contents": "Isi",
