fix: New Persian translations from Crowdin [ci skip]

--- a/shared/i18n/locales/fa_IR/translation.json
+++ b/shared/i18n/locales/fa_IR/translation.json
@@ -388,6 +388,7 @@
   "Revision deleted": "نسخه حذف شد",
   "Current version": "نسخه فعلی",
   "{{userName}} edited": "{{userName}} ویرایش شد",
+  "Revision options": "گزینه‌های بازنگری‌ها",
   "Results": "نتایج",
   "No results for {{query}}": "نتیجه‌ای برای {{query}} یافت نشد",
   "Manage": "مدیریت",
@@ -554,6 +555,7 @@
   "Italic": "مورب",
   "Sorry, that link won’t work for this embed type": "متأسفیم، این لینک برای این نوع جاسازی کار نمی‌کند",
   "File attachment": "پیوست فایل",
+  "Embed PDF": "Embed PDF",
   "Enter a link": "لینک را وارد کنید",
   "Big heading": "عنوان بزرگ",
   "Medium heading": "عنوان متوسط",
@@ -647,7 +649,6 @@
   "Revoking": "در حال لغو",
   "Are you sure you want to revoke access?": "آیا مطمئن هستید که می‌خواهید دسترسی را لغو کنید؟",
   "Delete app": "حذف اپلیکیشن",
-  "Revision options": "گزینه‌های بازنگری‌ها",
   "Share options": "گزینه‌های اشتراک‌گذاری",
   "Headings you add to the document will appear here": "عناوینی که به سند اضافه می‌کنید اینجا نمایش داده می‌شوند",
   "Contents": "محتوا",
