fix: New Thai translations from Crowdin [ci skip]

--- a/shared/i18n/locales/th_TH/translation.json
+++ b/shared/i18n/locales/th_TH/translation.json
@@ -388,6 +388,7 @@
   "Revision deleted": "Revision deleted",
   "Current version": "เวอร์ชันปัจจุบัน",
   "{{userName}} edited": "{{userName}} ทำการปรับปรุง",
+  "Revision options": "Revision options",
   "Results": "ผลลัพธ์:",
   "No results for {{query}}": "ไม่มีผลลัพธ์สำหรับ {{query}}",
   "Manage": "Manage",
@@ -554,6 +555,7 @@
   "Italic": "ตัวเอียง",
   "Sorry, that link won’t work for this embed type": "ขออภัย ลิงก์นั้นใช้ไม่ได้สำหรับเนื้อหาประเภทนี้",
   "File attachment": "ไฟล์แนบ",
+  "Embed PDF": "Embed PDF",
   "Enter a link": "Enter a link",
   "Big heading": "หัวเรื่องหลัก",
   "Medium heading": "หัวเรื่องรอง",
@@ -647,7 +649,6 @@
   "Revoking": "Revoking",
   "Are you sure you want to revoke access?": "Are you sure you want to revoke access?",
   "Delete app": "Delete app",
-  "Revision options": "Revision options",
   "Share options": "Share options",
   "Headings you add to the document will appear here": "Headings you add to the document will appear here",
   "Contents": "Contents",
