fix: New Norwegian Bokmal translations from Crowdin [ci skip]

--- a/shared/i18n/locales/nb_NO/translation.json
+++ b/shared/i18n/locales/nb_NO/translation.json
@@ -388,6 +388,7 @@
   "Revision deleted": "Revisjon slettet",
   "Current version": "Nåværende versjon",
   "{{userName}} edited": "{{userName}} redigerte",
+  "Revision options": "Revisjonsalternativer",
   "Results": "Resultater",
   "No results for {{query}}": "Ingen resultater for {{query}}",
   "Manage": "Administrer",
@@ -554,6 +555,7 @@
   "Italic": "Kursiv",
   "Sorry, that link won’t work for this embed type": "Beklager, den lenken vil ikke fungere for denne innebygde typen",
   "File attachment": "Filvedlegg",
+  "Embed PDF": "Embed PDF",
   "Enter a link": "Skriv inn en lenke",
   "Big heading": "Stor overskrift",
   "Medium heading": "Middels overskrift",
@@ -647,7 +649,6 @@
   "Revoking": "Tilbakekaller",
   "Are you sure you want to revoke access?": "Er du sikker på at du vil tilbakekalle tilgangen?",
   "Delete app": "Slett app",
-  "Revision options": "Revisjonsalternativer",
   "Share options": "Delingsalternativer",
   "Headings you add to the document will appear here": "Overskrifter du legger til i dokumentet vil vises her",
   "Contents": "Innhold",
