fix: New Dutch translations from Crowdin [ci skip]

--- a/shared/i18n/locales/nl_NL/translation.json
+++ b/shared/i18n/locales/nl_NL/translation.json
@@ -138,8 +138,8 @@
   "Log out": "Uitloggen",
   "Mark notifications as read": "Meldingen als gelezen markeren",
   "Archive all notifications": "Alle meldingen archiveren",
-  "Mark as read": "Mark as read",
-  "Mark as unread": "Mark as unread",
+  "Mark as read": "Als gelezen markeren",
+  "Mark as unread": "Als ongelezen markeren",
   "New App": "Nieuwe app",
   "New Application": "Nieuwe applicatie",
   "This version of the document was deleted": "Deze versie van het document is verwijderd",
@@ -265,13 +265,13 @@
   "Emoji created successfully": "Emoji met succes aangemaakt",
   "Uploading": "Bezig met uploaden",
   "Add emoji": "Emoji toevoegen",
-  "Square images with transparent backgrounds work best. If your image is too large, we’ll try to resize it for you.": "Square images with transparent backgrounds work best. If your image is too large, we’ll try to resize it for you.",
+  "Square images with transparent backgrounds work best. If your image is too large, we’ll try to resize it for you.": "Vierkante afbeeldingen met transparante achtergronden werken het beste. Als de afbeelding te groot is, proberen we het aan te passen.",
   "Upload an image": "Afbeelding uploaden",
   "Click or drag to replace": "Klik of sleep om te vervangen",
   "Drop the image here": "Sleep de afbeelding hierheen",
   "Click, drop, or paste an image here": "Klik, plaats of plak hier een afbeelding",
   "PNG, JPG, GIF, or WebP up to {{ size }}": "PNG, JPG, GIF, of WebP tot {{ size }}",
-  "Choose a name": "Choose a name",
+  "Choose a name": "Kies een naam",
   "name can only contain lowercase letters, numbers, and underscores.": "naam mag alleen kleine letters, cijfers en onderstrepingstekens bevatten.",
   "This emoji will be available as": "Deze emoji zal beschikbaar zijn als",
   "Module failed to load": "Module kon niet geladen worden",
@@ -353,12 +353,12 @@
   "Sorry, an error occurred.": "Sorry, er is iets fout gegaan.",
   "Click to retry": "Klik om opnieuw te proberen",
   "Back": "Terug",
-  "Notification options": "Notification options",
+  "Notification options": "Meldingsopties",
   "Unknown": "Onbekend",
-  "Mentions": "Mentions",
-  "Comments and replies": "Comments and replies",
-  "Document events": "Document events",
-  "Collection events": "Collection events",
+  "Mentions": "Vermeldingen",
+  "Comments and replies": "Opmerkingen en antwoorden",
+  "Document events": "Documentgebeurtenissen",
+  "Collection events": "Collectiegebeurtenissen",
   "Mark all as read": "Markeer alles als gelezen",
   "You're all caught up": "Je bent helemaal bij",
   "Client type": "Type klant",
@@ -555,7 +555,7 @@
   "Italic": "Cursief",
   "Sorry, that link won’t work for this embed type": "Sorry, die link werkt niet voor dit insluitingstype",
   "File attachment": "Bestandsbijlage",
-  "Embed PDF": "Embed PDF",
+  "Embed PDF": "PDF insluiten",
   "Enter a link": "Voer een link in",
   "Big heading": "Grote titel",
   "Medium heading": "Middelgrote titel",
@@ -609,7 +609,7 @@
   "Video": "Video",
   "None": "Geen",
   "Delete embed": "Insluiting verwijderen",
-  "Formatting controls": "Formatting controls",
+  "Formatting controls": "Opmaakbesturing",
   "Distribute columns": "Kolommen verdelen",
   "Could not import file": "Kon bestand niet importeren",
   "Unsubscribed from document": "Afgemeld voor document",
