Gemini first-pass

--- a/shared/i18n/locales/en_US/translation.json
+++ b/shared/i18n/locales/en_US/translation.json
@@ -1206,11 +1206,14 @@
   "Choose a photo or image to represent yourself.": "Choose a photo or image to represent yourself.",
   "This could be your real name, or a nickname — however you’d like people to refer to you.": "This could be your real name, or a nickname — however you’d like people to refer to you.",
   "Email address": "Email address",
+  "Are you sure?": "Are you sure?",
+  "Removing": "Removing",
+  "Removing this authentication provider will prevent members from signing in with {{ authProvider }}.": "Removing this authentication provider will prevent members from signing in with {{ authProvider }}.",
   "Are you sure you want to require invites?": "Are you sure you want to require invites?",
   "New users will first need to be invited to create an account. <em>Default role</em> and <em>Allowed domains</em> will no longer apply.": "New users will first need to be invited to create an account. <em>Default role</em> and <em>Allowed domains</em> will no longer apply.",
   "Settings that impact the access, security, and content of your workspace.": "Settings that impact the access, security, and content of your workspace.",
   "Allow members to sign-in with {{ authProvider }}": "Allow members to sign-in with {{ authProvider }}",
-  "Disabled": "Disabled",
+  "Connect {{ authProvider }} to allow members to sign-in": "Connect {{ authProvider }} to allow members to sign-in",
   "Allow members to sign-in using their email address": "Allow members to sign-in using their email address",
   "The server must have SMTP configured to enable this setting": "The server must have SMTP configured to enable this setting",
   "Access": "Access",
@@ -1398,6 +1401,7 @@
   "All events": "All events",
   "All {{ groupName }} events": "All {{ groupName }} events",
   "Delete webhook": "Delete webhook",
+  "Disabled": "Disabled",
   "Subscribed events": "Subscribed events",
   "Edit webhook": "Edit webhook",
   "Webhook created": "Webhook created",
